MR2-1675 - Add a css height to prevent AVM height getting too tall; r=cmkm
Differential Revision: https://phabricator.services.mozilla.com/D138859

--- a/browser/components/companion/content/components/view-group.inc.css
+++ b/browser/components/companion/content/components/view-group.inc.css
@@ -120,6 +120,7 @@
 
 .view-title {
   font-size: 1.20rem;
+  height: 16px;
 }
 
 .view-domain-container {
